--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -14,10 +14,10 @@ next: SA1_161.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “A faithful good son who is correctly faithful, not at home, and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disenchantment with form … feeling … perception … volition, and often cultivate disenchantment with consciousness.’
+2\.  It was then that the Bhagavān addressed the monks, “A faithful good son who is correctly faithful, not at home, and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … perception … volition, and often cultivate disillusionment with consciousness.’
 {:#p2}
 
-3\. “A faithful good son who is correctly faithful, not at home, and has left home then often cultivates disenchantment with form … feeling … perception … volition, and often cultivates disenchantment with consciousness, so he becomes disenchanted with form … feeling … perception … volition, and becomes disenchanted with consciousness. He then attains the escape from form … feeling … perception … volition, and attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, vexation, and suffering.”
+3\. “A faithful good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … perception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … perception … volition, and becomes disillusioned with consciousness. He then attains the escape from form … feeling … perception … volition, and attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, vexation, and suffering.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
