--- a/01_agama/samyukta/01/SA1_159.md
+++ b/01_agama/samyukta/01/SA1_159.md
@@ -17,7 +17,7 @@ next: SA1_160.html
 2\. It was then that the Bhagavān addressed the monks, “A faithful good son should have this thought, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … perception … volition, and often cultivate disenchantment with consciousness.’
 {:#p2}
 
-3\. “A faithful good son then often cultivates disenchantment with form … feeling … perception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … perception … volition, and becomes disillusioned with consciousness. After being disillusioned, he parts with desire and is liberated from them. Being liberated, he knows and sees: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know for that I won’t be subject to a later existence.”
+3\. “A faithful good son then often cultivates disenchantment with form … feeling … perception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … perception … volition, and becomes disillusioned with consciousness. After being disillusioned, he parts with desire and is liberated from them. Being liberated, he knows and sees: ‘My births have been ended, the religious life has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
