--- a/01_agama/samyukta/01/SA1_163.md
+++ b/01_agama/samyukta/01/SA1_163.md
@@ -17,7 +17,7 @@ next: SA1_172.html
 2\. It was then that the Bhagavān addressed the monks, “Now, I will discuss things that are destroyed and not destroyed. Listen closely, and well consider it. I will explain this for you.
 {:#p2}
 
-3\. “Monks, form is something destroyed, but the cessation and extinguishment  of that form is not something that’s destroyed. Feeling … perception … volition … consciousness is something destroyed, but the cessation and extinguishment of that consciousness is not something that’s destroyed.”
+3\. “Monks, form is something destroyed, but the cessation and extinguishment[\[2\]](#n2){:#ref2} of that form is not something that’s destroyed. Feeling … perception … volition … consciousness is something destroyed, but the cessation and extinguishment of that consciousness is not something that’s destroyed.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -26,6 +26,7 @@ next: SA1_172.html
 ### Notes
 
 1. {:#n1} This sūtra is parallel with [SN 22.32](https://suttacentral.net/sn22.32){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}*extinguishment*. Ch. 涅槃. I believe here the Chinese is transliterating a word related to Nirvāṇa that’s an ordinary participle meaning “extinguishment.” The Pali parallel lacks this, giving two other synonyms for cessation: *nirodho vūpasamo atthaṅgamo*. [\[back\]](#ref2)
 
 ---
 
