--- a/01_agama/dirgha/DA_11.md
+++ b/01_agama/dirgha/DA_11.md
@@ -3,7 +3,7 @@ layout: default
 title: The Long Discourses | 11. Increasing One by One
 type: kramdown
 base: ../../
-previous: DA_4.html
+previous: DA_8.html
 next: DA_12.html
 ---
 # [The Long Discourses](index.html)
@@ -213,8 +213,9 @@ The monks then accepted the teaching and listened.
 
 ### Notes
 
-1. {:#n1} While this sutra doesn’t have a direct parallel in Pali or other sources, it’s essentially an abbreviated version of the Dasuttara Sutta, including the first four and last set of items found in DA 10 and [DN 34](https://suttacentral.net/dn34). [\[back\]](#ref1)
+1. {:#n1} While this sutra doesn’t have a direct parallel in Pali or other sources, it’s essentially an abbreviated version of the Dasuttara Sutta, including the first four and last set of items found in DA 10 and [DN 34](https://suttacentral.net/dn34){: target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}*central country*. I.e., a civilized region rather than a frontier region that’s barbaric. The conditions in lawless regions in the ancient world was not conducive to practicing. In India, this referred to countries like Śrāvastī and Magadha. [\[back\]](#ref2)
+
 ---
 
 Translator: Charles Patton
