Minor typo fixes to SA 1.1-8.

--- a/01_agama/samyukta/01/SA1_1.md
+++ b/01_agama/samyukta/01/SA1_1.md
@@ -20,7 +20,7 @@ next: SA1_2.html
 3\. “Thus, observe that feeling … perception … volition … consciousness is impermanent. Such observation then is right view. Correctly observing it gives rise to disillusionment. Being disillusioned, delight and greed [for consciousness] will end. When delight and greed [for consciousness] have ended, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, monks, someone wanting to realize the mind's liberation for themselves then can realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
+4\. “Thus, monks, someone wanting to realize the mind's liberation for themselves can then realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
