--- a/01_agama/samyukta/01/SA1_5.md
+++ b/01_agama/samyukta/01/SA1_5.md
@@ -20,7 +20,7 @@ next: SA1_6.html
 3\. “Thus, you should correctly contemplate feeling … perception … volition … consciousness, observe that consciousness is impermanent, and truly know it. Why is that? When consciousness is correctly contemplated, observed to be impermanent, and truly known, that stops desire and greed for consciousness. When desire and greed [for consciousness] are stopped, that’s said to be the mind’s liberation.
 {:#p3}
 
-4\. “Thus, someone wanting to realize the mind's liberation for themselves then can realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
+4\. “Thus, someone wanting to realize the mind's liberation for themselves can then realize it: ‘My births have been ended, the religious practice has been established, and the task has been accomplished. I myself know that I won’t be subject to a later existence.’”[\[2\]](#n2){:#ref2}
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
