--- a/01_agama/samyukta/01/SA1_6.md
+++ b/01_agama/samyukta/01/SA1_6.md
@@ -17,7 +17,7 @@ next: SA1_7.html
 2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and [1b] don’t stop or become free of desire for it, it’s not possible to stop suffering. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t stop or become free of desire for it, it’s not possible to stop suffering.
 {:#p2}
 
-3\. “Monks, if you know and understand form and stop and become free of desire for it, it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and end and become free of desire for it, it’s possible to end suffering.”
+3\. “Monks, if you know and understand form and stop and become free of desire for it, it’s possible to stop suffering. Thus, if you know and understand feeling … perception … volition … consciousness and stop and become free of desire for it, it’s possible to end suffering.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
