--- a/01_agama/samyukta/01/SA1_7.md
+++ b/01_agama/samyukta/01/SA1_7.md
@@ -14,7 +14,7 @@ next: SA1_8.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When you don’t know and don’t understanding form and don’t stop and don’t become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know and don’t understanding feeling … perception … volition … consciousness and don’t stop and become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death.
+2\. It was then that the Bhagavān addressed the monks, “When you don’t know or understand form and don’t stop or become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death. Thus, when you don’t know or understand feeling … perception … volition … consciousness and don’t stop or become free of desire for it, the mind isn’t liberated, and it’s not possible to transcend the fear of birth, old age, illness, and death.
 {:#p2}
 
 3\. “Monks, if you know and understand form and stop and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death. Thus, if you know and understand feeling … perception … volition … consciousness and stop and become free of desire for it, the mind is liberated, and it’s possible to transcend the fear of birth, old age, illness, and death.”
