Added DA 25 and edited published sutras in SA 35.

--- a/01_agama/samyukta/35/SA35_40.md
+++ b/01_agama/samyukta/35/SA35_40.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 40. Wrong Views Regarding Actions'
+title: 'The Related Discourses | 35. Views | 40. No Generosity'
 type: kramdown
 base: ../../../
 previous: SA35_7.html
@@ -9,22 +9,28 @@ next: SA35_43.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 40. Wrong View Regarding Actions
+### 40. No Generosity
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘There’s no generosity, no congregation, no teaching, and no results of good or bad destinies from actions. There’s no present or other world, no mother or father, and no sentient beings. There are no arhats in the world who rightly arrive at the right destination or who themselves see the Dharma and know they’ve realized it fully, whether it’s in the present or another world: “My births have ended, the religious practice has been established, the task has been accomplished, and I  know I won’t be subject to a later existence.”’
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘There’s no generosity, no coming together, no teaching, and no good or bad destinies that result from actions. There’s no present life or another life, no mother, no father, and no sentient beings. There are no arhats in the world who correctly arrive at the right destination, whether in the present life or another life, and who see the teaching and know they’ve fully realized it: “My births have been ended, the religious practice has been established, the task has been accomplished. I myself know that I won’t be subject to a later existence.”’[\[2\]](#n2){:#ref2}
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+### Notes
+1. {:#n1} Parallels for this sūtra include [SN 24.5](https://suttacentral.net/sn24.5){:target="_blank"}, [DN 2](https://suttacentral.net/dn2){:target="_blank"}, and [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}This closely matches the wrong view of Maskarin Gośālīputra in [DĀ 27](../../dirgha/DA_27.html){:target="_blank"} and Ajita Keśakambala in [DN 2](https://suttacentral.net/dn2){:target="_blank"}. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
