--- a/01_agama/samyukta/35/SA35_43.md
+++ b/01_agama/samyukta/35/SA35_43.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 43. Wrong View Regarding Personal Ability'
+title: 'The Related Discourses | 35. Views | 43. No Personal Ability'
 type: kramdown
 base: ../../../
 previous: SA35_40.html
@@ -9,22 +9,29 @@ next: SA35_46.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 43. Wrong View Regarding Personal Ability
+### 43. No Personal Ability
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘There’s no power, no effort, and no power and effort. There are no men who are skillful, no men who are diligent, and no men who are skillful and diligent. There’s nothing self-made, nothing made by others, and nothing made by self and others. All people, all sentient beings, and all spirits lack skill, lack power, lack force, lack effort, and lack capability. Their certain lot is continuity, change, and the experience of the six destinies of pleasure and pain.’”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘There’s no power, no effort, and no power and effort. There are no men who are skillful, no men who are diligent, and no men who are skillful and diligent. There’s nothing self-made, nothing made by others, and nothing made by self and others. All people, all sentient beings, and all spirits lack skill, lack power, lack force, lack effort, and lack capability. Their certain lot is continuity, change, and the painful and pleasant experiences of the six destinies.’”[\[2\]](#n2){:#ref2}
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+
+### Notes
+1. {:#n1} Parallels for this sūtra include [SN 24.7](https://suttacentral.net/sn24.7){:target="_blank"}, [DN 2](https://suttacentral.net/dn2){:target="_blank"}, and [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}This matches a portion of the wrong view attributed to Kakuda Katyāyana in [DĀ 27](../../dirgha/DA_27.html){:target="_blank"} and Makkhali Gosāla in [DN 2](https://suttacentral.net/dn2){:target="_blank"}. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
