--- a/01_agama/samyukta/35/SA35_64.md
+++ b/01_agama/samyukta/35/SA35_64.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 64. Wrong View Regarding Actions'
+title: 'The Related Discourses | 35. Views | 64. Nihilism'
 type: kramdown
 base: ../../../
 previous: SA35_61.html
@@ -9,20 +9,26 @@ next: SA35_67.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 64. Wrong View Regarding Actions
+### 64. Nihilism
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘Acting and instructing [others] to act, cutting and instructing [others] to cut, boiling and instructing [others] to boil, and killing and instructing [others] to kill; harming sentient beings, stealing other’s property, committing sexual misconduct, knowingly speaking falsehoods, and drinking alcohol; penetrating walls, cutting chains, and stealing; even going down the roads to harm villages, harm cities, and harm the populace with a wheel of the sharpest blades that slices, dices, and chops them up into a great pile of flesh, they form such a theory: “That is not a cause or condition for evil, and it doesn’t bring evil. [If someone were] to kill and injure [people] south of the Gaṅgā River and make a great congregation to the north of the Gaṅgā River,  those wouldn’t be causes or conditions for good and evil, nor would they bring good and evil. Doing things like bestowing gifts, training, maintaining [scriptures], performing blessings, and cooperating doesn’t create merits, either.”’”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘Suppose someone acts and instructs others to act, cuts and instructs others to cut, boils and instructs others to boil, and kills and instructs others to kill. They harm sentient beings, steal other’s property, commit sexual misconduct, knowingly speak falsehoods, and drink alcohol. They penetrate walls, cut chains, and steal [from buildings]. They even go down the roads and destroy villages, destroy cities, and destroy the populace with a wheel of the sharpest blades that slices, dices, and chops them up into a great pile of flesh. To train in this way is not a cause or condition for evil, and it doesn’t bring bad [results]. Suppose they kill and injure people south of the Gaṅgā River and make a great congregation to the north of the Gaṅgā River. Those wouldn’t be causes or conditions for good and evil, nor would they bring good and bad [results]. Doing things like bestowing gifts, training, maintaining [scriptures], performing blessings, and sharing benefits doesn’t create merits, either.”’”[\[2\]](#n2){:#ref2}
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+### Notes
+1. {:#n1}Parallels for this sūtra include [SN 24.6](https://suttacentral.net/sn24.6){:target="_blank"}, [DN 2](https://suttacentral.net/dn2){:target="_blank"}, and [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}This wrong view is attributed to Pūraṇa Kāśyapa in both [DN 2](https://suttacentral.net/dn2){:target="_blank"} and [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
