--- a/01_agama/samyukta/35/SA35_67.md
+++ b/01_agama/samyukta/35/SA35_67.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 67. Wrong View Regarding Rebirth'
+title: 'The Related Discourses | 35. Views | 67. Birth and Death Is Predetermined'
 type: kramdown
 base: ../../../
 previous: SA35_64.html
@@ -9,22 +9,28 @@ next: ../36/index.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 67. Wrong View Regarding Rebirth
+### 67. Birth and Death Is Predetermined
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘Here there are 1,400,000 ways of creation, 60,605 actions, three actions, two actions, one action, and a half-action. There are 62 pathways, 62 inner eons, 120 hells, 130 faculties, 36 realms of craving, 49,000 nāga homes, and 49,000 garuḍa homes. There are 49,000 heretics of wrong livelihood and 49,000 heretics who leave home. There are seven eons of perception and seven eons without perception. There are seven asuras, seven piśācīs, seven gods, and seven humans. There are 700 oceans, seven dreams, 700 dreams, seven peaks, 700 peaks, seven feelings, 700 feelings, six births, 10 progressions, and 8 regions of great men. Here there are 84,000 great eons. Both the foolish and the wise are continuously reborn until the ultimate limit of suffering. There are no ascetics or priests who say, “I always observe precepts and accept ascetic practices. I cultivate the religious practices, making unripe actions ripen and ripened actions to be discarded.” Progress and retreat can’t be known. These pains and pleasures are always present for the definite measure of birth-and-death. Like a ball of thread tossed into the air that gradually falls to the ground on its own, likewise is this definite measure of 84,000 great eons of birth-and-death.’”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is at attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘Here, there are 1,400,000 ways of creation, 60,605 actions, three actions, two actions, one action, and a half-action. There are 62 pathways, 62 internal eons, 120 hells, 130 faculties, 36 realms of craving, 49,000 nāga homes, and 49,000 garuḍa homes. There are 49,000 heretics of wrong livelihood and 49,000 heretics who leave home. There are seven eons of perception and seven eons without perception. There are seven asuras, seven piśācīs, seven gods, and seven humans. There are 700 oceans, seven dreams, 700 dreams, seven peaks, 700 peaks, seven feelings, 700 feelings, six births, 10 progressions, and eight grounds of great men. Here, there are 84,000 great eons. Both the foolish and the wise are continuously reborn until they reach the final end of suffering. There are no ascetics or priests who say, “I always observe precepts and accept ascetic practices. I cultivate the religious practice, making unripe actions ripen and discarding ripened actions.” Their progress and retreat can’t be known. These pains and pleasures are always present for the definite measure of birth-and-death. Like a ball of thread tossed into the air that eventually falls to the ground on its own, likewise is this definite measure of 84,000 great eons of birth-and-death.’”[\[2\]](#n2){:#ref2}
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+### Notes
+1. {:#n1}Parallels for this sūtra include [SN 24.8](https://suttacentral.net/sn24.8){:target="_blank"} and [DN 2](https://suttacentral.net/dn2){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}This wrong view is attributed to Makkhali Gosāla in both [DN 2](https://suttacentral.net/dn2){:target="_blank"}. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
