--- a/01_agama/samyukta/35/SA35_7.md
+++ b/01_agama/samyukta/35/SA35_7.md
@@ -9,18 +9,18 @@ next: SA35_40.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 7. The Cause of Attachment and Sorrow
+### 7. The Source of Suffering
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes grief, sorrow, vexation, and pain that have yet to arise to arise and grief, sorrow, vexation, and pain that have arisen to deepen and increase?”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds, that’s an attachment, and that’s viewed as self, which causes the arising of grief, sorrow, vexation, and pain that have yet to arise and increases the grief, sorrow, vexation, and pain that have already arisen?”
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please let him explain this in detail! After they hear it, the monks will accept and hand it down.”
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please explain this in detail! After they hear it, the monks will accept and approve.”
 {: #p3}
 
-4\. The Buddha addressed the monks, “It’s because form exists, because form arises, because form ties and becomes an attachment that form is viewed as self. Grief, sorrow, vexation, and pain that have yet to arise are made to arise, and grief, sorrow, vexation, and pain that have arisen are deepened and increased. Feeling, perception, volition, and consciousness are likewise.
+4\. The Buddha addressed the monks, “It’s because form exists and because form arises, binds, and becomes an attachment that it’s viewed as self. It causes the arising of grief, sorrow, pain, and vexation that have yet to arise and increases the grief, sorrow, pain, and vexation that have already arisen. *Feeling, perception, volition, and consciousness are likewise*.
 {: #p4}
 
 5\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -33,22 +33,22 @@ They replied, “Impermanent, Bhagavān!”
 
 They replied, “It’s painful, Bhagavān!”
 
-7\. “So it is, monks. If something is impermanent, then it’s painful. Because this pain exists, these things arise, tie, become attachments, and are viewed as self. Grief, sorrow, vexation, and pain that have yet to arise are made to arise, and grief, sorrow, vexation, and pain that have arisen are deepened and increased. Feeling, perception, volition, and consciousness are likewise.
+7\. “So it is, monks. If something is impermanent, then it’s painful. Because this pain exists, these things arise, tie, become attachments, and are viewed as self. It causes the arising of grief, sorrow, pain, and vexation that have yet to arise and increases the grief, sorrow, pain, and vexation that have already arisen. *Feeling, perception, volition, and consciousness are likewise*.
 {: #p7}
 
-8\. “Therefore, monks, no forms exist in the past, future, or present, whether internal or external, coarse or fine, lovely or ugly, and far or near that are self or different than self, and [the two] are not present in each other. This is called right wisdom. Feeling, perception, volition, and consciousness are likewise.
+8\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, and distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. *Feeling, perception, volition, and consciousness are likewise*.
 {: #p8}
 
-9\. “Again, whether seen, heard, felt, cognized, arisen, or sought following memory, perception, or contemplation, all these are not self or different than self, and [the two] are not present in each other. This is called right wisdom.
+9\. “Again, whether seen, heard, felt, cognized, arisen, or sought from memory, perception, or contemplation, they are all not self, not different than self, nor are either present in other. This is called correct wisdom
 {: #p9}
 
-10\. “If someone’s view is that there’s a self, a world, or this and another world that are permanent, eternal, and unchanging, all these are not self or different than self, and [the two] are not present in each other. This is called right wisdom.
+10\. “If there’s a view that there’s a self, world, or this or another life that’s permanent, eternal, and unchanging, they are all not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p10}
 
-11\. “Again, if someone’s view is that it’s not this world that’s self or self-possessed and not the future that’s self or self-possessed, all these are not self or different than self, and [the two] are not present in each other. This is called right wisdom.
+11\. “Again, if there’s a view that it’s not a self or what belongs to self of this life or not self or what belongs to self in the future [life], they are all not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p11}
 
-12\. “Suppose a well-versed noble disciple contemplates these six positions as not self and not self-possessed. Such a contemplator will end suspicions about the Buddha and end suspicions about the Dharma and Saṃgha. Monks, this is called a well-versed noble disciple who’s no longer capable of doing physical, verbal, or mental actions that lead to the three bad destinies. Even when careless, this noble disciple is definitely headed toward complete awakening. He’ll have seven rebirths as gods or humans and reach the limit of suffering.”
+12\. “Suppose well-versed noble disciples observe these six positions as not self and not what belongs to self. Such observation stops misgivings about the Buddha and stops misgivings about the Dharma and Saṃgha. Monks, this is called a well-versed noble disciple who’s no longer capable of doing physical, verbal, or mental actions that lead to the three bad destinies. Even when they are careless, this noble disciple is definitely headed toward complete awakening. With seven rebirths as gods or humans, they’ll reach the end of suffering.”
 {: #p12}
 
 13\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
@@ -58,7 +58,7 @@ They replied, “It’s painful, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
