--- a/01_agama/samyukta/35/SA35_52.md
+++ b/01_agama/samyukta/35/SA35_52.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 52. Wrong View Regarding Purity'
+title: 'The Related Discourses | 35. Views | 52. Purification Has No Cause'
 type: kramdown
 base: ../../../
 previous: SA35_49.html
@@ -9,20 +9,26 @@ next: SA35_55.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 52. Wrong View Regarding Purity
+### 52. Purification Has No Cause
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘The purity of sentient beings has no cause and no condition.’”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘The purity of sentient beings has no cause and no condition.’”[\[2\]](#n2){:#ref2}
 {: #p2}
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+### Notes
+1. {:#n1}Parallels for this sūtra include [SN 24.7](https://suttacentral.net/sn24.7){:target="_blank"}, [DN 2](https://suttacentral.net/dn2){:target="_blank"}, and [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2}This wrong view is attributed to Makkhali Gosāla in [DN 2](https://suttacentral.net/dn2){:target="_blank"} and to Kakuda Katyāyana in [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
