--- a/01_agama/samyukta/35/SA35_58.md
+++ b/01_agama/samyukta/35/SA35_58.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 58. Wrong View Regarding Knowing and Seeing'
+title: 'The Related Discourses | 35. Views | 58. Knowledge and Vision Has No Cause'
 type: kramdown
 base: ../../../
 previous: SA35_55.html
@@ -9,22 +9,27 @@ next: SA35_61.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 58. Wrong View Regarding Knowing and Seeing
+### 58. Knowledge and Vision Has No Cause
 
-1\. Thus I have heard: One time, the Buddha stayed at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
+1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties, that’s an attachment, and that’s viewed as self and causes sentient beings to create such views and such statements? ‘Knowing and seeing in sentient beings has no cause and no condition.’”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘Knowledge and vision in sentient beings has no cause and no condition.’”[\[1\]](#n1){:#ref1}
 {: #p2}
 
-3\. The monks then said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …” *It’s thus explained in detail and in the sequence of the three sutras (35.7-9) above.*
+3\. The monks then said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
+
+*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+
+### Notes
+1. {:#n1}The Taisho edition inexplicably omits a wrong view in this sūtra. Yinshun corrects this by assuming it should be the positive corollary to the previous sutra ([35.55-57](SA35_55.html){:target="_blank"}). [\[back\]](#ref1)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 21 May 2021
 {: .revised}
 
 ---
