--- a/01_agama/samyukta/01/SA1_18.md
+++ b/01_agama/samyukta/01/SA1_18.md
@@ -17,7 +17,7 @@ next: SA1_19.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. Whatever causes or conditions give rise to forms, they are also impermanent. How could forms that arise from impermanent causes and conditions be permanent? Feeling … perception … volition … consciousness is impermanent. Whatever causes or conditions give rise to consciousness, they are also impermanent. How could consciousness that arises from impermanent causes and conditions be permanent?
 {:#p2}
 
-3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true observation.
+3\. “Thus, monks, form is impermanent, and feeling … perception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
 {:#p3}
 
 4\. “Noble disciples who thus observe are liberated from form and liberated from feeling … perception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, sorrow, lamentation, pain, and vexation.”
@@ -33,7 +33,7 @@ next: SA1_19.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 December 2020
+Last Revised: 25 May 2021
 {: .revised}
 
 ---
