--- a/01_agama/ekottarika/43/EA_43_07.md
+++ b/01_agama/ekottarika/43/EA_43_07.md
@@ -206,7 +206,7 @@ The Buddha asked the king, “Have you asked others about this subject before no
 40\. “I went and asked Saṃjayin Vairaṭīputra about this subject. That man replied to me, ‘The past has ceased and will not again arise. The future has yet to arrive, and again doesn’t exist. The present doesn’t remain, for what remains changes.’ Then I thought, ‘Now, I asked about rewards in the present life, but this reply takes up the three periods of time. That doesn’t make any sense!’ Again, I gave up and left.
 {: #p40}
 
-41\. “I went to Nirgrantha Jñātiputra and asked him about this subject: ‘How is it, Nirgrantha? Are there rewards received in the present life for merits that are made in the present?’ That man replied to me, ‘Without cause or condition, sentient beings are in bondage. There’s no cause and no condition for the bondage of sentient beings, There isn’t any case and any condition for the attachment of sentient beings to bondage, either. There’s no cause and no condition for the purification of sentient beings.’
+41\. “I went to Nirgrantha Jñātiputra and asked him about this subject: ‘How is it, Nirgrantha? Are there rewards received in the present life for merits that are made in the present?’ That man replied to me, ‘Sentient beings are in bondage without cause or condition, and there isn’t any cause or condition for the attachment of sentient beings to bondage, either. There’s no cause and no condition for the purification of sentient beings.’
 {: #p41}
 
 42\. “Again, I thought, ‘These ascetics are fools who can’t tell what’s true from what’s false. Like blind people without eyes, their answers don’t match the subject I ask about.  They seem like play-things to someone of a noble wheel-turning king’s lineage [like me].’ Again, I quickly gave up and left.
