--- a/01_agama/dirgha/DA_27.md
+++ b/01_agama/dirgha/DA_27.md
@@ -124,7 +124,7 @@ The Buddha told the king, “Have you visited other ascetics and priests to ask 
 27\. He also said to the Buddha, “There was one time I went to Ajita Keśakambala and asked him, ‘Venerable, just as people ride elephants and horse chariots armed with … martial methods … various occupations give rise their rewards in the present. Now, this assembly presently cultivates the path. What reward do they obtain in the present?’
 {: #p27}
 
-28\. He replied to me, ‘A person acquires the four elements and takes them to the end of his life. The earth element returns to earth; the water element returns to water; the fire element returns to fire; and the air element returns to air. People are all destroyed, and their faculties return to space. When a person dies, their body is placed on a palanquin and they are taken to a charnel ground. There, they are cremated until their bones are the color of pigeons, or they turn into ashes. Whether foolish or wise, people are all destroyed when their lives end. It’s the rule of annihilation.’
+28\. “He replied to me, ‘A person acquires the four elements and takes them to the end of his life. The earth element returns to earth; the water element returns to water; the fire element returns to fire; and the air element returns to air. People are all destroyed, and their faculties return to space. When a person dies, their body is placed on a palanquin and they are taken to a charnel ground. There, they are cremated until their bones are the color of pigeons, or they turn into ashes. Whether foolish or wise, people are all destroyed when their lives end. It’s the rule of annihilation.’
 {: #p28}
 
 29\. “Bhagavān, it was like someone asking about a melon and getting an answer about a plum; he was likewise. I asked if they attain rewards in the present or not, and he answered about annihilation. So, I then thought, ‘I am a warrior king whose head was anointed with water. There’s no reason to kill this mendicant, but I should bind him and drive him away!’ I felt anger that fettered my mind. Having had this thought, I then departed.”
